# check_jacobians_ceres

./: CMakeLists.txt  README.md
include/: global_param.hpp  imu_factor.h  imu_factor_pnp.h  poseParameterization.h
src/: poseParameterization.cpp  test_analytic_factor.cpp  test_analytic_factor_clic.cpp  test_analytic_factor_clic_origin.cpp
